force-app/main/default/objects/Application__c/fields/AMCP_member__c.field-meta.xml
<CustomField>
    <fullName>AMCP_member__c</fullName>
    <label>AMCP member?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>