force-app/main/default/objects/Application__c/fields/Application_Package__c.field-meta.xml
<CustomField>
    <fullName>Application_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Package</label>
    <referenceTo>Application_Package__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>