force-app/main/default/objects/Application__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Committee</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Award</fullName>
            </value>
            <value>
                <fullName>Diplomat</fullName>
            </value>
            <value>
                <fullName>National P&amp;T Judge Application</fullName>
            </value>
            <value>
                <fullName>Foundation Internship Virtual Preceptor</fullName>
            </value>
            <value>
                <fullName>Foundation Intern Reviewer</fullName>
            </value>
            <value>
                <fullName>Best Poster Judge/Poster Mentor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>