force-app/main/default/objects/Application__c/fields/Applied_for_Co_Diplomat__c.field-meta.xml
<CustomField>
    <fullName>Applied_for_Co_Diplomat__c</fullName>
    <label>Applied for Co-Diplomat</label>
    <length>50</length>
    <type>Text</type>
</CustomField>