force-app/main/default/objects/Application__c/fields/Area_of_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Expertise__c</fullName>
    <label>Area of Expertise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>