force-app/main/default/objects/Application__c/fields/Award_Type__c.field-meta.xml
<CustomField>
    <fullName>Award_Type__c</fullName>
    <label>Award Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advocate of the Year Award</fullName>
            </value>
            <value>
                <fullName>Individual Contribution Award</fullName>
            </value>
            <value>
                <fullName>Experiential Education Preceptor Award</fullName>
            </value>
            <value>
                <fullName>Managed Care Pharmacy Residency Director/Preceptor Award</fullName>
            </value>
            <value>
                <fullName>Distinguished Service Award</fullName>
            </value>
            <value>
                <fullName>Diplomat of the Year</fullName>
            </value>
            <value>
                <fullName>New Practitioner Award</fullName>
            </value>
            <value>
                <fullName>Spirit of Volunteerism Award</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>