force-app/main/default/objects/Application__c/fields/Award_Year__c.field-meta.xml
<CustomField>
    <fullName>Award_Year__c</fullName>
    <label>Award Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Years</valueSetName>
    </valueSet>
</CustomField>