force-app/main/default/objects/Application__c/fields/Background__c.field-meta.xml
<CustomField>
    <fullName>Background__c</fullName>
    <label>Background</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinician</fullName>
            </value>
            <value>
                <fullName>Early-Career Professional</fullName>
            </value>
            <value>
                <fullName>Faculty or Educator</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Managed Care Professional</fullName>
            </value>
            <value>
                <fullName>AMCP Foundation Intern Alumni</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>