force-app/main/default/objects/Application__c/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <formula>TEXT(  Contact_Name__r.Race__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ethnicity</label>
    <type>Text</type>
</CustomField>