force-app/main/default/objects/Application__c/fields/Event_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Display_Name__c</fullName>
    <formula>Event_Name__r.EventApi__Display_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Display Name</label>
    <type>Text</type>
</CustomField>