force-app/main/default/objects/Application__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to the Event related to the Volunteer section of the Application.</description>
    <label>Event Name</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>