force-app/main/default/objects/Application__c/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <label>Expertise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Expertise Selected</fullName>
            </value>
            <value>
                <fullName>ACO/PCMH/Emerging Care Model</fullName>
            </value>
            <value>
                <fullName>Adherence</fullName>
            </value>
            <value>
                <fullName>Admin/Management</fullName>
            </value>
            <value>
                <fullName>Benefit Design/Reimbursement</fullName>
            </value>
            <value>
                <fullName>Biosimilars add Biologics</fullName>
            </value>
            <value>
                <fullName>Clinical - Ambulatory/Primary Care</fullName>
            </value>
            <value>
                <fullName>Clinical - Substance Use Disorder Treatment</fullName>
            </value>
            <value>
                <fullName>Clinical - Cardiovascular Disease</fullName>
            </value>
            <value>
                <fullName>Clinical - Endocrinology/Diabetes</fullName>
            </value>
            <value>
                <fullName>Clinical - Gastroenterology/Hepatology</fullName>
            </value>
            <value>
                <fullName>Clinical - Immunology/Rheumatology</fullName>
            </value>
            <value>
                <fullName>Clinical - Infectious Disease (includes HIV)</fullName>
            </value>
            <value>
                <fullName>Clinical - Gene Therapies</fullName>
            </value>
            <value>
                <fullName>Clinical - General Internal Medicine</fullName>
            </value>
            <value>
                <fullName>Clinical - Neurology</fullName>
            </value>
            <value>
                <fullName>Clinical - Oncology/Hematology</fullName>
            </value>
            <value>
                <fullName>Clinical - Pain Management</fullName>
            </value>
            <value>
                <fullName>Clinical - Pediatrics</fullName>
            </value>
            <value>
                <fullName>Clinical - Pharmacokinetics</fullName>
            </value>
            <value>
                <fullName>Clinical - Psychiatry/Mental Health</fullName>
            </value>
            <value>
                <fullName>Clinical - Pulmonary</fullName>
            </value>
            <value>
                <fullName>Clinical - Reproductive Health</fullName>
            </value>
            <value>
                <fullName>Clinical - Rare Disesase</fullName>
            </value>
            <value>
                <fullName>Digital Therapeutics</fullName>
            </value>
            <value>
                <fullName>Drug Utilization Mgmt</fullName>
            </value>
            <value>
                <fullName>Formularies-Development/Mgmt/Guidelines</fullName>
            </value>
            <value>
                <fullName>Fraud/Waste/Abuse</fullName>
            </value>
            <value>
                <fullName>Health Care Policy/Ethics</fullName>
            </value>
            <value>
                <fullName>Health Disparties/Social Determinants of Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>