force-app/main/default/objects/Application__c/fields/File_Link__c.field-meta.xml
<CustomField>
    <fullName>File_Link__c</fullName>
    <label>File Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>