force-app/main/default/objects/Application__c/fields/File_Link_Url__c.field-meta.xml
<CustomField>
    <fullName>File_Link_Url__c</fullName>
    <formula>IF( ISBLANK(File_Link__c ) , &apos;&apos;, HYPERLINK( File_Link__c , &quot;Uploaded File&quot;, &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Link Url</label>
    <type>Text</type>
</CustomField>