force-app/main/default/objects/Application__c/fields/FON_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>FON_Member_Status__c</fullName>
    <formula>Contact_Name__r.MembershipStatusReadOnlyFormula__c</formula>
    <label>Member Status</label>
    <type>Text</type>
</CustomField>