force-app/main/default/objects/Application__c/fields/FON_Member_Type__c.field-meta.xml
<CustomField>
    <fullName>FON_Member_Type__c</fullName>
    <formula>Contact_Name__r.MembershipTypeReadOnlyFormula__c</formula>
    <label>Member Type</label>
    <type>Text</type>
</CustomField>