force-app/main/default/objects/Application__c/fields/FON_Original_Join_Year__c.field-meta.xml
<CustomField>
    <fullName>FON_Original_Join_Year__c</fullName>
    <formula>text(year( Contact_Name__r.Activated_Date__c ))</formula>
    <label>Original Join (Year)</label>
    <type>Text</type>
</CustomField>