force-app/main/default/objects/Application__c/fields/FON_Title__c.field-meta.xml
<CustomField>
    <fullName>FON_Title__c</fullName>
    <formula>Contact_Name__r.Title</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>