force-app/main/default/objects/Application__c/fields/In_what_capacity_are_affiliated__c.field-meta.xml
<CustomField>
    <fullName>In_what_capacity_are_affiliated__c</fullName>
    <label>In what capacity are affiliated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Affiliates</valueSetName>
    </valueSet>
</CustomField>