force-app/main/default/objects/Application__c/fields/Interested_in_State_Advocacy_Leader__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_State_Advocacy_Leader__c</fullName>
    <description>Would you be interested in learning about our State Advocacy Leader roles in your homestate?</description>
    <label>Interested in State Advocacy Leader?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please send me information</fullName>
            </value>
            <value>
                <fullName>Not interested at this time.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>