force-app/main/default/objects/Application__c/fields/Judge_Mentor__c.field-meta.xml
<CustomField>
    <fullName>Judge_Mentor__c</fullName>
    <label>Judge/Mentor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMCP Foundation Best Poster Judge</fullName>
            </value>
            <value>
                <fullName>AMCP Foundation Poster Mentor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>