force-app/main/default/objects/Application__c/fields/Judge_Type__c.field-meta.xml
<CustomField>
    <fullName>Judge_Type__c</fullName>
    <label>Judge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entry Phase</fullName>
            </value>
            <value>
                <fullName>Semi-final Phase</fullName>
            </value>
            <value>
                <fullName>Final Phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>