force-app/main/default/objects/Application__c/fields/Nominee_Company__c.field-meta.xml
<CustomField>
    <fullName>Nominee_Company__c</fullName>
    <label>Nominee Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>