force-app/main/default/objects/Application__c/fields/Nominee_Group__c.field-meta.xml
<CustomField>
    <fullName>Nominee_Group__c</fullName>
    <label>Nominee Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>