force-app/main/default/objects/Application__c/fields/Nominee_Name_nominating_an_individual__c.field-meta.xml
<CustomField>
    <fullName>Nominee_Name_nominating_an_individual__c</fullName>
    <label>Nominee Name (nominating an individual)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>