force-app/main/default/objects/Application__c/fields/Other_Lines_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Other_Lines_of_Business__c</fullName>
    <label>Other (Lines of Business)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>