force-app/main/default/objects/Application__c/fields/Participate_only_as_Abstract_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Participate_only_as_Abstract_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participate only as Abstract Reviewer</label>
    <type>Checkbox</type>
</CustomField>