force-app/main/default/objects/Application__c/fields/Primary_Position__c.field-meta.xml
<CustomField>
    <fullName>Primary_Position__c</fullName>
    <formula>TEXT(  Contact_Name__r.Primary_Position__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Position</label>
    <type>Text</type>
</CustomField>