force-app/main/default/objects/Application__c/fields/Qualities_and_or_experience__c.field-meta.xml
<CustomField>
    <fullName>Qualities_and_or_experience__c</fullName>
    <description>What qualities and/or experience will you bring if selected? In addition, please list AMCP activities along with volunteer experiences you believe pertinent to the committee (s) you have selected.</description>
    <label>Qualities and/or Experience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>