force-app/main/default/objects/Application__c/fields/Recent_Experiences__c.field-meta.xml
<CustomField>
    <fullName>Recent_Experiences__c</fullName>
    <label>Recent Experiences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developing drug monographs for P&amp;T Committee review</fullName>
            </value>
            <value>
                <fullName>Presenting clinical information/formulary recommendations to a P&amp;T Committee( i.e making oral presentations)</fullName>
            </value>
            <value>
                <fullName>Working with value-based models</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>