force-app/main/default/objects/Application__c/fields/Registered_for_AMCP_2023_in_San_Antonio__c.field-meta.xml
<CustomField>
    <fullName>Registered_for_AMCP_2023_in_San_Antonio__c</fullName>
    <label>Registered for AMCP 2023 in San Antonio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>