force-app/main/default/objects/Application__c/fields/Reviewer_Type__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Type__c</fullName>
    <label>Reviewer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMCP Foundation/AbbVie, Inc. Application Review (HEOR)</fullName>
            </value>
            <value>
                <fullName>AMCP Foundation/Genentech, Inc. Application Reviewer (Market Access)</fullName>
            </value>
            <value>
                <fullName>AMCP Foundation /Pfizer, Inc. Managed Care Application Reviewer</fullName>
            </value>
            <value>
                <fullName>AMCP Foundation/Pfizer, Inc Oncology Application Reviewer</fullName>
            </value>
            <value>
                <fullName>AMCP Foundation health Inequity Application Reviewer</fullName>
            </value>
            <value>
                <fullName>AMCP Foundation Application Reviewer (Managed Care Research)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>