force-app/main/default/objects/Application__c/fields/School_of_Pharmacy_Graduated_from__c.field-meta.xml
<CustomField>
    <fullName>School_of_Pharmacy_Graduated_from__c</fullName>
    <label>School of Pharmacy Graduated from</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>School_of_Pharmacy</valueSetName>
    </valueSet>
</CustomField>