force-app/main/default/objects/Application__c/fields/School_of_Pharmacy_Served_as_Diplomat__c.field-meta.xml
<CustomField>
    <fullName>School_of_Pharmacy_Served_as_Diplomat__c</fullName>
    <label>School of Pharmacy (Served as Diplomat)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>School_of_Pharmacy</valueSetName>
    </valueSet>
</CustomField>