force-app/main/default/objects/Application__c/fields/Select_Committee__c.field-meta.xml
<CustomField>
    <fullName>Select_Committee__c</fullName>
    <label>Select Committee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Committee_Choices</valueSetName>
    </valueSet>
</CustomField>