force-app/main/default/objects/Application__c/fields/Selected_as_Poster_Judge__c.field-meta.xml
<CustomField>
    <fullName>Selected_as_Poster_Judge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected as Poster Judge</label>
    <type>Checkbox</type>
</CustomField>