force-app/main/default/objects/Application__c/fields/Special_Qualification_Interests__c.field-meta.xml
<CustomField>
    <fullName>Special_Qualification_Interests__c</fullName>
    <inlineHelpText>Existing schools contacts/special qualifications/interests</inlineHelpText>
    <label>Special Qualification/Interests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>