force-app/main/default/objects/Application__c/fields/Statement__c.field-meta.xml
<CustomField>
    <fullName>Statement__c</fullName>
    <label>Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>