force-app/main/default/objects/Application__c/fields/Title_of_Session__c.field-meta.xml
<CustomField>
    <fullName>Title_of_Session__c</fullName>
    <label>Title of Session</label>
    <length>255</length>
    <type>Text</type>
</CustomField>