force-app/main/default/objects/Application__c/fields/Volunteer_Date__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Date__c</fullName>
    <label>Volunteer Date</label>
    <type>Date</type>
</CustomField>