force-app/main/default/objects/Application__c/fields/Volunteer_Short_Term_Score__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Short_Term_Score__c</fullName>
    <formula>IF( AND( ISPICKVAL( Application_Type__c , &apos;Volunteer&apos;),Volunteer_Date__c &gt;  ADDMONTHS( TODAY(),-12) ), 2,  0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Short Term Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>