force-app/main/default/objects/Application__c/fields/Volunteer_Type__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Type__c</fullName>
    <label>Volunteer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JMCP Peer Reviewer</fullName>
            </value>
            <value>
                <fullName>JMCP Poster Reviewer</fullName>
            </value>
            <value>
                <fullName>Conference Buddy - Mentor</fullName>
            </value>
            <value>
                <fullName>Conference Buddy - Mentee</fullName>
            </value>
            <value>
                <fullName>AMCP Concierge Volunteer</fullName>
            </value>
            <value>
                <fullName>Meeting greeters</fullName>
            </value>
            <value>
                <fullName>JMCP author</fullName>
            </value>
            <value>
                <fullName>District Days</fullName>
            </value>
            <value>
                <fullName>Lobby Days</fullName>
            </value>
            <value>
                <fullName>Mock Interview Program - Mentor</fullName>
            </value>
            <value>
                <fullName>Mock Interview Program - Mentee</fullName>
            </value>
            <value>
                <fullName>Meeting Speaker</fullName>
            </value>
            <value>
                <fullName>Webinar Speaker</fullName>
            </value>
            <value>
                <fullName>Committee</fullName>
            </value>
            <value>
                <fullName>Moderator</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
            <value>
                <fullName>Foundation P&amp;T Competition Judges</fullName>
            </value>
            <value>
                <fullName>Foundation Intern Application Reviewer</fullName>
            </value>
            <value>
                <fullName>Foundation Intern Virtual Mentor</fullName>
            </value>
            <value>
                <fullName>Foundation Best Poster Competition Judge and Poster Mentor</fullName>
            </value>
            <value>
                <fullName>Foundation Best Poster Competition Judge</fullName>
            </value>
            <value>
                <fullName>Foundation Best Poster Mentor</fullName>
            </value>
            <value>
                <fullName>Meeting Hospitality Host</fullName>
            </value>
            <value>
                <fullName>JMCP Top Reviewers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>