force-app/main/default/objects/Application__c/fields/Where_Nominee_served_as_preceptor__c.field-meta.xml
<CustomField>
    <fullName>Where_Nominee_served_as_preceptor__c</fullName>
    <inlineHelpText>Where Nominee served as a preceptor for an IPEE or APPE for student pharmacists</inlineHelpText>
    <label>Where Nominee served as preceptor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>