force-app/main/default/objects/Application__c/fields/Which_pharmacy_school_college__c.field-meta.xml
<CustomField>
    <fullName>Which_pharmacy_school_college__c</fullName>
    <label>Which pharmacy school/college?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>School_of_Pharmacy</valueSetName>
    </valueSet>
</CustomField>