force-app/main/default/objects/Application__c/fields/X2_years_unselected__c.field-meta.xml
<CustomField>
    <fullName>X2_years_unselected__c</fullName>
    <formula>IF(AND(DATEVALUE(CreatedDate) + 730 &gt; TODAY(), DATEVALUE(CreatedDate) &gt;= DATEVALUE(&quot;2025-12-31&quot;), Selected__c == false), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2 years unselected</label>
    <type>Checkbox</type>
</CustomField>