force-app/main/default/objects/Application__c/fields/X2nd_Additional_Member__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Additional_Member__c</fullName>
    <label>2nd Additional Member</label>
    <length>50</length>
    <type>Text</type>
</CustomField>