force-app/main/default/objects/Application__c/fields/X2nd_Committee_Choice__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Committee_Choice__c</fullName>
    <label>2nd Committee Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Committee_Choices</valueSetName>
    </valueSet>
</CustomField>