force-app/main/default/objects/Application__c/fields/X3rd_Committee_Choice__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Committee_Choice__c</fullName>
    <label>3rd Committee Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Committee_Choices</valueSetName>
    </valueSet>
</CustomField>