force-app/main/default/objects/Application__c/fields/Year_Graduated__c.field-meta.xml
<CustomField>
    <fullName>Year_Graduated__c</fullName>
    <label>Year Graduated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Years</valueSetName>
    </valueSet>
</CustomField>