force-app/main/default/objects/Application__c/recordTypes/Award_Application.recordType-meta.xml
<RecordType>
    <fullName>Award_Application</fullName>
    <active>true</active>
    <description>Award Application Record Type</description>
    <label>Award Application</label>
</RecordType>