force-app/main/default/objects/Application__c/recordTypes/Best_Poster_Judge_Poster_Mentor.recordType-meta.xml
<RecordType>
    <fullName>Best_Poster_Judge_Poster_Mentor</fullName>
    <active>true</active>
    <description>Poster Application Record Type</description>
    <label>Best Poster Judge/Poster Mentor</label>
</RecordType>