force-app/main/default/objects/Application__c/recordTypes/Committee_Application.recordType-meta.xml
<RecordType>
    <fullName>Committee_Application</fullName>
    <active>true</active>
    <description>Committee Application Record Type</description>
    <label>Committee Application</label>
</RecordType>