force-app/main/default/objects/Application__c/recordTypes/Diplomat_Application.recordType-meta.xml
<RecordType>
    <fullName>Diplomat_Application</fullName>
    <active>true</active>
    <description>Diplomat Application Record Type</description>
    <label>Diplomat Application</label>
</RecordType>