force-app/main/default/objects/Application__c/recordTypes/Master.recordType-meta.xml
<RecordType>
    <fullName>Master</fullName>
    <active>false</active>
    <label>Master</label>
</RecordType>