force-app/main/default/objects/Application__c/recordTypes/National_P_T_Judge_Application.recordType-meta.xml
<RecordType>
    <fullName>National_P_T_Judge_Application</fullName>
    <active>true</active>
    <description>Judge Application Record Type</description>
    <label>National P&amp;T Judge Application</label>
</RecordType>