force-app/main/default/objects/Application__c/recordTypes/Volunteer_Application.recordType-meta.xml
<RecordType>
    <fullName>Volunteer_Application</fullName>
    <active>true</active>
    <description>Volunteer Application Record Type</description>
    <label>Volunteer Application</label>
</RecordType>