force-app/main/default/objects/Application__c/listViews/Diplomat_Applications.listView-meta.xml
<ListView>
    <fullName>Diplomat_Applications</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Type__c</field>
        <operation>equals</operation>
        <value>Diplomat</value>
    </filters>
    <filters>
        <field>Selected__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Diplomat Applications</label>
</ListView>